--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 <body>
     <!-----------------  HEADER ----------------------->
     <div class="Header1">
-        <div>neuer cooler Sport-Kalender v1.3 </div>
+        <div>Sport-Kalender v1.1 </div>
 
         <div class="Menu">
             <div>
